# tts-hub

./: .gitignore  FYP_DEPTH_PLAN.md  FYP_REPORT_HANDOFF.md  PRODUCT.md  README.md  analyze_safe_snap.py  app.py  claude_exact.py  claude_original.py  claude_ui.py  new_webui.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  run.sh  webui.py
.claude/: launch.json
brand/: README.md
claude_exact/: ONBOARDING_CONCEPTS.md  REGRESSIONS_PLAN.md  index.html  tour.js
claude_ui/: index.html
custom_ui/: index.html
desktop/: ONBOARDING_CONCEPTS.md  REGRESSIONS_PLAN.md  index.html  tour.js
docs/: BENCHMARK_ATTEMPTS.md  BENCHMARK_DUMP_FULL.txt  BENCHMARK_FAILURES_AND_HARDENING.md  DETERMINISTIC_CODEBOOK_FINDINGS.md  DETERMINISTIC_CODEBOOK_PLAN.md  EXPERIMENT_H2_SUCCESS.md  EXPERIMENT_H_FAILURE.md  FYP_COMPLETION_TASK_PLAN.md  IMPLEMENTATION_SUMMARY.md  MODEL_ID_HEAD_ISSUE.md  POST_UAT_IMPROVEMENTS.md  ROADMAP_AND_IMPROVEMENTS.md  SPEC_SHEET.md  TECHNICAL_REPORT.md  TECHNICAL_REPORT_VNEXT_MULTICLASS.md  UI_AUDIT_REPORT.md  UI_REDESIGN_REQUIREMENTS.md  WATERMARK_FINAL_FINDINGS.md  WATERMARK_IMPLEMENTATION_PROGRESS.md  WATERMARK_OVERFIT_TEST.md  WATERMARK_PIPELINE_DIAGNOSTICS.md  WATERMARK_PROJECT_PLAN.md  WATERMARK_RUNBOOK.md  WATERMARK_SANITY_AUDIT.md  debug_context_dump.txt  mobile.md  trial_and_error_model_id_detection.md
frontend/: vite.config.ts
hub/: __init__.py  audio_utils.py  generation_jobs.py  hub_manager.py  model_registry.py  paths.py  subprocess_worker.py  voice_library.py  watermark_default.txt  watermark_service.py
(+119 files in other folders)
