[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "watermark"
version = "0.1.0"
description = "Audio Watermarking FYP"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchaudio",
    "numpy",
    "scikit-learn",
    "soundfile",
    "tqdm"
]

[tool.setuptools.packages.find]
include = ["watermark*"]
